--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "firebase-admin": "^9.11.1",
     "node-fetch": "^2.6.5",
     "venom-bot": "^3.1.6"
