--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sanity/client": "^2.19.0",
     "dotenv": "^10.0.0",
     "firebase-admin": "^9.11.1",
     "node-fetch": "^2.6.5",
