--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/client": "^2.19.0",
     "dotenv": "^10.0.0",
     "firebase-admin": "^9.11.1",
+    "fluent-ffmpeg": "^2.1.2",
     "nanoid": "^3.1.28",
     "node-fetch": "^2.6.5",
     "venom-bot": "^3.1.6"
