--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-venom",
+  "name": "ldlv-whatsapp-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
